--- a/apps/multi/project.json
+++ b/apps/multi/project.json
@@ -15,7 +15,7 @@
         "main": "apps/multi/src/main.tsx",
         "polyfills": "apps/multi/src/polyfills.ts",
         "tsConfig": "apps/multi/tsconfig.app.json",
-        "assets": ["apps/multi/src/favicon.ico", "apps/multi/src/assets"],
+        "assets": ["apps/multi/src/assets"],
         "styles": [],
         "scripts": [],
         "webpackConfig": "@nrwl/react/plugins/webpack"
@@ -48,7 +48,8 @@
       "defaultConfiguration": "development",
       "options": {
         "buildTarget": "multi:build",
-        "hmr": true
+        "hmr": true,
+        "proxyConfig": "apps/multi/proxy.conf.json"
       },
       "configurations": {
         "development": {
