--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
+    "start:backend": "nx serve backend",
     "build": "nx build",
     "test": "nx test"
   },
@@ -12,6 +13,7 @@
     "@emotion/react": "11.10.0",
     "@emotion/styled": "11.10.0",
     "core-js": "^3.6.5",
+    "fastify": "^4.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "regenerator-runtime": "0.13.7",
@@ -24,6 +26,7 @@
     "@nrwl/eslint-plugin-nx": "14.5.10",
     "@nrwl/jest": "14.5.10",
     "@nrwl/linter": "14.5.10",
+    "@nrwl/node": "^14.5.10",
     "@nrwl/react": "14.5.10",
     "@nrwl/web": "14.5.10",
     "@nrwl/workspace": "14.5.10",
@@ -45,10 +48,12 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "27.5.1",
     "nx": "14.5.10",
+    "pino-pretty": "^9.1.0",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "ts-jest": "27.1.4",
     "ts-node": "10.9.1",
+    "tsc-alias": "^1.7.0",
     "typescript": "~4.7.2"
   }
 }
