--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "nx serve",
     "start:backend": "nx serve backend",
+    "init": "prisma generate",
     "build": "nx build",
     "test": "nx test"
   },
@@ -12,8 +13,10 @@
   "dependencies": {
     "@emotion/react": "11.10.0",
     "@emotion/styled": "11.10.0",
+    "@prisma/client": "^4.2.1",
     "core-js": "^3.6.5",
     "fastify": "^4.5.2",
+    "fastify-plugin": "^4.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "regenerator-runtime": "0.13.7",
@@ -50,6 +53,7 @@
     "nx": "14.5.10",
     "pino-pretty": "^9.1.0",
     "prettier": "^2.6.2",
+    "prisma": "^4.2.1",
     "react-test-renderer": "18.2.0",
     "ts-jest": "27.1.4",
     "ts-node": "10.9.1",
