Update: README.md: add tech stack, cleanup

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nx serve",
     "start:backend": "nx serve backend",
     "init": "prisma generate",
+    "db:migrate": "prisma migrate",
     "build": "nx build",
     "test": "nx test"
   },
