--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@emotion/react": "11.10.0",
-    "@emotion/styled": "11.10.0",
+    "@chakra-ui/react": "^2.2.9",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@prisma/client": "^4.2.1",
     "core-js": "^3.6.5",
     "fastify": "^4.5.2",
     "fastify-plugin": "^4.2.1",
+    "framer-motion": "^7.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.3.0",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0"
   },
