Add::Library: plugins, routes, schemas

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,8 @@
     "jsx": "react",
     "paths": {
       "@multi-chat/backend/plugins": ["libs/backend/plugins/src/index.ts"],
+      "@multi-chat/backend/routes": ["libs/backend/routes/src/index.ts"],
+      "@multi-chat/backend/schemas": ["libs/backend/schemas/src/index.ts"],
       "@multi-chat/frontend/pages": ["libs/frontend/pages/src/index.ts"]
     }
   },
