--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@chakra-ui/react": "^2.2.9",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@fastify/env": "^4.1.0",
+    "@fastify/sensible": "^5.1.1",
     "@prisma/client": "^4.2.1",
+    "@sinclair/typebox": "^0.24.28",
     "core-js": "^3.6.5",
     "fastify": "^4.5.2",
     "fastify-plugin": "^4.2.1",
