--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fastify/env": "^4.1.0",
     "@fastify/jwt": "^6.3.2",
     "@fastify/sensible": "^5.1.1",
+    "@fastify/swagger": "^7.4.1",
     "@prisma/client": "^4.2.1",
     "@sinclair/typebox": "^0.24.28",
     "bcryptjs": "^2.4.3",
