--- a/apps/backend/project.json
+++ b/apps/backend/project.json
@@ -15,18 +15,13 @@
         "production": {
           "optimization": true,
           "extractLicenses": true,
-          "inspect": false,
-          "fileReplacements": [
-            {
-              "replace": "apps/backend/src/environments/environment.ts",
-              "with": "apps/backend/src/environments/environment.prod.ts"
-            }
-          ]
+          "inspect": false
         }
       }
     },
     "serve": {
       "executor": "@nrwl/node:node",
+      "inspect": false,
       "options": {
         "buildTarget": "backend:build"
       },
