--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-router-dom": "^6.3.0",
     "regenerator-runtime": "0.13.7",
+    "socket.io": "^4.5.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
