generate frontend/components

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,6 +20,7 @@
       "@multi-chat/backend/modules": ["libs/backend/modules/src/index.ts"],
       "@multi-chat/backend/plugins": ["libs/backend/plugins/src/index.ts"],
       "@multi-chat/backend/schemas": ["libs/backend/schemas/src/index.ts"],
+      "@multi-chat/frontend/components": ["libs/frontend/components/src/index.ts"],
       "@multi-chat/frontend/hooks": ["libs/frontend/hooks/src/index.ts"],
       "@multi-chat/frontend/pages": ["libs/frontend/pages/src/index.ts"]
     }
