--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fastify": "^4.5.2",
     "fastify-plugin": "^4.2.1",
     "framer-motion": "^7.2.1",
+    "nanostores": "^0.6.0",
     "ramda": "^0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
