Add: LoginPage and NotFound pages

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,7 +22,8 @@
       "@multi-chat/backend/schemas": ["libs/backend/schemas/src/index.ts"],
       "@multi-chat/frontend/components": ["libs/frontend/components/src/index.ts"],
       "@multi-chat/frontend/hooks": ["libs/frontend/hooks/src/index.ts"],
-      "@multi-chat/frontend/pages": ["libs/frontend/pages/src/index.ts"]
+      "@multi-chat/frontend/pages": ["libs/frontend/pages/src/index.ts"],
+      "@multi-chat/frontend/stores": ["libs/frontend/stores/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
