--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,10 +20,12 @@
       "@multi-chat/backend/modules": ["libs/backend/modules/src/index.ts"],
       "@multi-chat/backend/plugins": ["libs/backend/plugins/src/index.ts"],
       "@multi-chat/backend/schemas": ["libs/backend/schemas/src/index.ts"],
+      "@multi-chat/frontend/api": ["libs/frontend/api/src/index.ts"],
       "@multi-chat/frontend/components": ["libs/frontend/components/src/index.ts"],
       "@multi-chat/frontend/hooks": ["libs/frontend/hooks/src/index.ts"],
       "@multi-chat/frontend/pages": ["libs/frontend/pages/src/index.ts"],
-      "@multi-chat/frontend/stores": ["libs/frontend/stores/src/index.ts"]
+      "@multi-chat/frontend/stores": ["libs/frontend/stores/src/index.ts"],
+      "@multi-chat/shared/types": ["libs/shared/types/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
