--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^6.3.0",
     "regenerator-runtime": "0.13.7",
     "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
