--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -25,7 +25,8 @@
       "@multi-chat/frontend/hooks": ["libs/frontend/hooks/src/index.ts"],
       "@multi-chat/frontend/pages": ["libs/frontend/pages/src/index.ts"],
       "@multi-chat/frontend/stores": ["libs/frontend/stores/src/index.ts"],
-      "@multi-chat/shared/socket": ["libs/shared/socket/src/index.ts"]
+      "@multi-chat/shared/socket": ["libs/shared/socket/src/index.ts"],
+      "@multi-chat/shared/types": ["libs/shared/types/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
