--- a/nx.json
+++ b/nx.json
@@ -9,7 +9,7 @@
       "dependencies": "*",
       "devDependencies": "*"
     },
-    ".eslintrc.json": "*"
+    ".eslintrc.js": "*"
   },
   "tasksRunnerOptions": {
     "default": {
