--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "init": "prisma generate",
     "db:migrate": "prisma migrate",
     "build": "nx build",
+    "lint": "nx run-many --target=lint --nx-bail",
     "test": "nx test"
   },
   "private": true,
@@ -64,6 +65,13 @@
     "babel-jest": "27.5.1",
     "cypress": "^10.2.0",
     "eslint": "~8.15.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-import-resolver-typescript": "3.4.0",
+    "eslint-import-resolver-webpack": "^0.13.2",
+    "eslint-plugin-jest": "^25.3.4",
+    "eslint-plugin-jest-dom": "^4.0.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-testing-library": "^5.0.3",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
