--- a/libs/frontend/hooks/tsconfig.lib.json
+++ b/libs/frontend/hooks/tsconfig.lib.json
@@ -19,5 +19,5 @@
     "**/*.spec.jsx",
     "**/*.test.jsx"
   ],
-  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx", "../hooks/hooks.ts"]
+  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"]
 }
